samples/_failures_safe/1761251937_58c2a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4d5e0360.c: In function ‘main’:
./samples/SAFE/__tmp_4d5e0360.c:168:23: error: expected ‘;’ at end of input
  168 |         input[len - 1]
      |                       ^
      |                       ;
./samples/SAFE/__tmp_4d5e0360.c:168:9: error: expected declaration or statement at end of input
  168 |         input[len - 1]
      |         ^~~~~
./samples/SAFE/__tmp_4d5e0360.c:168:9: error: expected declaration or statement at end of input
